Add missing relative_url filters

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ layout: default
 
     </div>
     <div class="section">
-      <img alt="paper plane" class="text-center" src="/assets/images/paper-plane.svg" width="400px">
+      <img alt="paper plane" class="text-center" src="{{'/assets/images/paper-plane.svg' | relative_url }}" width="400px">
     </div>
   </div>
 </div>
@@ -32,7 +32,7 @@ layout: default
   <div class="card-wiki">
     <h2>Wiki</h2>
     <p class="card-description">Check out the wiki!</p>
-    <img alt="Paper and pencil" src="/assets/images/books-circle.svg" width="250px">
+    <img alt="Paper and pencil" src="{{'/assets/images/books-circle.svg' | relative_url }}" width="250px">
 
     <a href="docs/{{ repo[0] }}">
       <div class="card-button button button-outline">See wiki</div>
@@ -44,7 +44,7 @@ layout: default
   <div class="card-docs">
     <h2>Documentation</h2>
     <p class="card-description">Find all the documentation in ONE place.</p>
-    <img alt="Paper and pencil" src="/assets/images/paper-document.svg" width="200px">
+    <img alt="Paper and pencil" src="{{'/assets/images/paper-document.svg' | relative_url }}" width="200px">
     <a href="docs">
       <div class="card-button button button-outline">Go to docs</div>
     </a>
